--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
